<resources>
    <string name="app_name">GPS Toggler 3</string>
    <string name="main_page">GPS Toggler 3 application activity</string>
    <string name="app_title">GPS Toggler 3 ver. %s</string>
    <string name="action_settings">Settings</string>
    <string name="loading_apps">Loading applications…</string>
    <string name="textAutomatic">Automatic toggle mode</string>
    <string name="editLogHint">Processing log</string>
    <string name="no_apps_found">No applications with GPS access found</string>
    <string name="no_active_apps_found">No applications asking for GPS access found</string>
    <string name="loaded_apps">Loaded GPS aware applications</string>
    <string name="descr_inactive">Inactive</string>
    <string name="descr_watching">Watching…</string>
    <string name="descr_active">GPS activated</string>
    <string name="descr_image">Status of application</string>
    <string name="enumerating">Enumerating applications…</string>
    <string name="enumerated">Enumerated [%1$d] applications, where [%2$d] watched</string>
    <string name="activated">Found [%1$d] activated applications</string>
    <string name="connected_to_service">Connected to service</string>
    <string name="failed_connect_to_service">Failed to connect to the service</string>
    <string name="selected_failed">Failed to load selected applications</string>
    <string name="activated_failed">Failed to load activated applications</string>
    <string name="add_lookup_f">Watching for \'%s\' in foreground.</string>
    <string name="add_lookup_b">Watching for \'%s\' in background.</string>
    <string name="remove_lookup">Removed \'%s\' from the watch</string>
    <string name="activate_lookup">Automation enabled</string>
    <string name="deactivate_lookup">Automation disabled</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="as_is">Continue as is</string>
    <string name="gpsOn">GPS enabled</string>
    <string name="gpsOff">GPS disabled</string>
    <string name="settings">…</string>
    <string name="automaticOn">Automatic mode</string>
    <string name="automaticOff">Manual mode</string>
    <string name="ask_4_root">GPS Toggler 3 requires \'root\' access which could be obtained on this device. Agree?</string>
    <string name="no_root">GPS Toggler 3 requires \'root\' access which couldn\'t be obtained on this device. Leaving now.</string>
    <string name="no_service">GPS Toggler 3 failed to start uninterrutable service. The application will continue but beware of system stopping it.</string>
    <string name="error_load_automation_state">"Error. Problem to load Automation state."</string>
    <string name="error_obtain_gps_state">"Error. Problem to obtain GPS state."</string>
    <string name="error_set_gps_state">Error. Problem to set the new GPS state.</string>
    <string name="systemize_failed">GPS Toggler 3 failed to properly initiate system level engine. This application is useless in your configuration. Please report to the developer at https://github.com/sms2000. Sorry…</string>
    <string name="gps_state">"New GPS state \'%s\'."</string>
    <string name="gps_state_same">"GPS state \'%s\' is the same."</string>
    <string name="toggle_attempted">Attempting to toggle the GPS state.</string>
    <string name="toggle_failed">Error. Failed to toggle the GPS state.</string>
    <string name="gps_app_on">Automation enabled GPS for [%d] app(s)</string>
    <string name="gps_app_off">Automation disabled GPS</string>
    <string name="widget_icon">GPS Toggler 3 small widget</string>
    <string name="widget_icon_description">GPS Toggler 3 small widget</string>
    <string name="widget_full">GPS Toggler 3 full widget</string>
    <string name="app_icon">Starting application widget</string>
    <string name="app_icon_description">Starting application widget</string>
    <string name="internal_error_1">Internal error [1].</string>
    <string name="Name">Name</string>
    <string name="Package">Package</string>
    <string name="no_timestamp">  Last update\nunknown</string>
    <string name="permission_request">Permission request</string>
    <string name="req_write_external_storage">GPS Toggler 3 may install an additional program - the Monitor. This Monitor helps to prevent Android closing the application and promotes always-available mode.\nYou need to grant access to the External Storage. If you disagree the GPS Toggler 3 will continue to run as is.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="user_not_willing_root">GPS Toggler 3 finished with \'root\' denied.</string>
    <string name="root_denied">GPS Toggler 3 finished with \'root\' denied.</string>
    <string name="appactivity_service_description">Enable to allow the GPS Toggler 3 to watch applications\' activity</string>
    <string name="appactivity_service_label">GPS Toggler 3 activity watchdog</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_use_monitor_app">Enable GPS Toggler 3 Monitor</string>
    <string name="pref_description_use_monitor_app">Installs the hidden Monitor application which helps to prevent GPS Toggler 3 being accidentally killed by user or Android</string>
    <string name="pref_description_multiwindow_aware">Watches for background applications in Multiwindow mode (Android 7.0+ or Samsung proprietary ROMs)</string>
    <string name="pref_title_multiwindow_aware">Multiwindow mode</string>
    <string name="pref_header_lifespan">Self-protection &amp; Monitor</string>
    <string name="pref_title_back_delay">Back key long press delay</string>
    <string-array name="pref_back_delay_titles">
        <item>100 ms</item>
        <item>150 ms</item>
        <item>200 ms</item>
        <item>250 ms</item>
        <item>300 ms</item>
        <item>350 ms</item>
        <item>400 ms</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_back_delay_values">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>350</item>
        <item>400</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_root_timeout_delay">Timeout for any \'root\' related operation</string>
    <string-array name="pref_root_timeout_delay_titles">
        <item>100 ms</item>
        <item>250 ms</item>
        <item>500 ms</item>
        <item>750 ms</item>
        <item>1 sec</item>
        <item>2.5 sec</item>
        <item>5 sec</item>
        <item>1 min</item>
    </string-array>
    <string-array name="pref_root_timeout_delay_values">
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>1000</item>
        <item>2550</item>
        <item>5000</item>
        <item>60000</item>
    </string-array>
    <string name="pref_title_widget_double_click">Widget double click delay</string>
    <string-array name="pref_widget_double_click_titles">
        <item>100 ms</item>
        <item>150 ms</item>
        <item>200 ms</item>
        <item>250 ms</item>
        <item>300 ms</item>
        <item>350 ms</item>
        <item>400 ms</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_widget_double_click_values">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>350</item>
        <item>400</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_on_polling_delay">Polling delay when the screen is on</string>
    <string-array name="pref_on_polling_delay_titles">
        <item>2.5 sec</item>
        <item>5 sec</item>
        <item>7.5 sec</item>
        <item>10 sec</item>
        <item>15 sec</item>
        <item>20 sec</item>
        <item>25 sec</item>
        <item>30 sec</item>
    </string-array>
    <string-array name="pref_on_polling_delay_values">
        <item>2500</item>
        <item>5000</item>
        <item>7500</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>25000</item>
        <item>30000</item>
    </string-array>
    <string name="pref_title_off_polling_delay">Polling delay when the screen is off</string>
    <string-array name="pref_off_polling_delay_titles">
        <item>30 sec</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
        <item>Wait indefinetly (or for a wake up call)</item>
    </string-array>
    <string-array name="pref_off_polling_delay_values">
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>3600000</item>
    </string-array>
    <string name="pref_header_cloud">In-cloud data store</string>
    <string name="button_store">Store in Google Drive</string>
    <string name="button_store_summary">Stores the Preferences in Google Drive</string>
    <string name="button_load">Load from Google Drive</string>
    <string name="button_load_summary">Loads the Preferences from Google Drive</string>
    <string name="error_cannot_resolve_account">Cannot resolve Google Drive account</string>
    <string name="button_google_drive_account">Google Drive account</string>
    <string name="google_drive_account_not_selected">No account selected. Please choose one.</string>
    <string name="title_activity_app_select">AppSelectActivity</string>
</resources>