<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="use_monitor_app"
        android:summary="@string/pref_description_use_monitor_app"
        android:title="@string/pref_title_use_monitor_app" />


    <ListPreference
        android:defaultValue="250"
        android:entries="@array/pref_back_delay_titles"
        android:entryValues="@array/pref_back_delay_values"
        android:key="back_delay"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_back_delay" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->

</PreferenceScreen>
