<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	      			android:layout_width="match_parent"
	      			android:layout_height="match_parent"
	      			android:orientation="horizontal"
	      			android:weightSum="100">

	<LinearLayout  	android:layout_width="0dp"
		       		android:layout_height="match_parent"
					android:layout_weight="60"
					android:orientation="vertical">

		<TextView	android:id="@+id/appName"
			  		android:layout_width="wrap_content"
		          	android:layout_height="wrap_content"
		          	android:text="@string/Name"
					android:textSize="16sp"
					android:textStyle="normal|bold" />

		 <TextView	android:id="@+id/appPackage"
		           	android:layout_width="wrap_content"
		           	android:layout_height="wrap_content"
		           	android:text="@string/Package" />
	</LinearLayout>

	<ogp.com.gpstoggler3.controls.TriStateSwitch
				android:layout_width="0dp"
                android:layout_weight="20"
				android:layout_height="match_parent"
				android:id="@+id/appLookup" />

	<ImageView	android:src="@mipmap/ic_launcher"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="20"
				android:scaleType="fitCenter"
				android:layout_gravity="end"
				android:id="@+id/appImage"
				android:contentDescription="@string/descr_image"/>
</LinearLayout>
