<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_p"
    tools:context="ogp.com.gpstoggler3.MainActivity"
    android:weightSum="100"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/linearAutomatic"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="1">
        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/toggleAutomatic"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_small_margin"
            android:textOn="@string/automaticOn"
            android:textOff="@string/automaticOff"
            android:onClick="onClickMode"
            android:layout_weight="0.5"/>

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/toggleGPS"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
            android:layout_marginStart="@dimen/activity_horizontal_small_margin"
            android:layout_marginRight="@dimen/activity_horizontal_small_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_small_margin"
            android:textOn="@string/gpsOn"
            android:textOff="@string/gpsOff"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <ogp.com.gpstoggler3.controls.OverscrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:id="@+id/listApps" />

    <ScrollView
        android:id="@+id/scrollLog"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="30"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:scrollbarStyle="insideOverlay"
        android:fillViewport="true" >

        <TextView
            android:id="@+id/textLog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editLogHint"/>
    </ScrollView>
</LinearLayout>
