<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	      			android:layout_width="match_parent"
	      			android:layout_height="wrap_content"
	      			android:orientation="horizontal"
	      			android:weightSum="100">

	<ImageView	android:src="@mipmap/ic_launcher"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="15"
		android:scaleType="fitCenter"
		android:layout_gravity="start"
		android:id="@+id/appIcon"
		android:contentDescription="@string/descr_app_icon"/>

	<LinearLayout  	android:layout_width="0dp"
		       		android:layout_height="wrap_content"
					android:layout_weight="70"
					android:orientation="vertical"
					android:layout_marginStart="@dimen/activity_horizontal_margin">

		<TextView	android:id="@+id/appName"
			  		android:layout_width="wrap_content"
		          	android:layout_height="wrap_content"
		          	android:text="@string/Name"
					android:textSize="16sp"
					android:textStyle="normal|bold" />

		<TextView	android:id="@+id/appPackage"
		           	android:layout_width="wrap_content"
		           	android:layout_height="wrap_content"
					android:lines="2"
		           	android:text="@string/Package" />
	</LinearLayout>

	<ImageView	android:src="@drawable/not_exists"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="15"
		android:layout_marginStart="@dimen/activity_horizontal_small_margin"
		android:scaleType="fitCenter"
		android:layout_gravity="end"
		android:id="@+id/appImage"
		android:contentDescription="@string/descr_image"/>
</LinearLayout>
